# algo2

./: .editorconfig  .gitignore  README.md  environment.yml  pyproject.toml
src/: main.py
src/algo/: brooks.py  dfs.py  edmonds_blossom.py  hungarian.py
src/algo/checkers/: edmonds_blossom_checker.py
src/algo/tests/: brooks_tests.py  edmonds_blossom_tests.py  hungarian_tests.py
src/algo/tests/lib/: edmonds_blossom.py  max_matching.py
src/infra/: algo.py  algo_controller.py  step.py
src/manager/: create_graph_frame.py  frame.py  manager.py  menu_frame.py  select_frame.py  tracker_frame.py
src/tracker/: tracker.py
