[tool.poetry]
name = "algo2"
version = "0.1.0"
description = ""
authors = ["Omer Priel <omer.priel2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
networkx = "^3.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
